2007-12-05  Dan Williams  <dcbw@redhat.com>

	* COPYING.LIB
		- Because we distribute eggtrayicon, need to include the LGPL too
			(gnome.org #449111)

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/vpn-properties/nm-vpn-properties.c
		- (vpn_druid_vpn_confirm_page_finish, edit_cb): ensure that the edited
			VPN connection has a vpn-properties setting to work around previous
			bugs where the vpn-properties setting wouldn't be created and saved

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (get_vpn_connections): don't show VPN connections that don't have
			the VPN Properties item

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (add_one_vpn_connection): don't crash on connections that are actually
			invalid but that the applet shows anyway.  Still need a better way
			to fix this.
		- (nma_menu_vpn_item_clicked): clarify action when the selected VPN
			connection is already active

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/applet-dbus-settings.c
		- (applet_dbus_connection_settings_changed): fix logic decision on
			connection comparison; replace settings rather than replacing the
			whole connection itself

2007-12-05  Dan Williams  <dcbw@redhat.com>

	* src/vpn-properties/nm-vpn-properties.c
		- (fixup_nm_connection_vpn): ensure the resulting NMConnection is valid
			before trying to use it

2007-12-04  Dan Williams  <dcbw@redhat.com>

	* src/applet.c
		- (wireless_dialog_response_cb): ensure that the connection gets updated
			when it's not a new connection
		- (get_secrets_dialog_response_cb): don't nag the user about the CA cert
			if they elected to ignore the warning

2007-12-04  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method-peap.c
	  src/wireless-security/eap-method-ttls.c
		- (fill_connection): correctly handle & update the CA certificate
			ignore option

2007-12-04  Dan Williams  <dcbw@redhat.com>

	* src/wireless-security/eap-method.c
	  po/POTFILES.in