@@ -1,3 +1,8 @@
+2007-12-07  Dan Williams  <dcbw@redhat.com>
+
+	* src/vpn-properties/nm-vpn-properties.c
+		- (main): don't call gtk_init() twice (gnome.org #473287)
+
 2007-12-05  Dan Williams  <dcbw@redhat.com>
 
 	* COPYING.LIB
